nivasa-macros/tests/trybuild/controller_response_metadata_no_route.stderr
error: controller metadata requires an HTTP method attribute
  --> tests/trybuild/controller_response_metadata_no_route.rs:10:8
   |
10 |     fn summary(&self) {}
   |        ^^^^^^^
